<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeated_background"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.3">

</LinearLayout>
 <LinearLayout
     android:layout_height="0dp"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:background="@drawable/output_border"
     android:paddingTop="3dp"
     android:paddingBottom="5dp"
     android:orientation="horizontal">
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/side_thingys">

     </LinearLayout>
    <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:outlineProvider="paddedBounds"
    android:background="@drawable/output_screen"
    android:orientation="vertical"
    android:layout_weight="8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/history"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value"
        android:layout_marginRight="20dp"
        android:textSize="30dp"
        android:paddingRight="10dp"
        android:text="@string/zero"/>

</LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/side_thingys">

     </LinearLayout>
 </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:background="@drawable/solar_border"
    android:layout_weight="1.5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:text="TEXAS INSTRUMENTS"
            android:textColor="#FFFFFF"
            android:textSize="17dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="top"
                android:src="@drawable/solar_panel"/>

        </LinearLayout>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:src="@drawable/ti_108_logo"
        android:layout_weight="1"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            </LinearLayout>
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/keypad_border"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="40dp"
            android:orientation="horizontal"
            android:layout_weight="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="ConcatNumber"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/seven"
                android:id="@+id/seven"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:onClick="ConcatNumber"
                android:background="@drawable/white_button_selector_2"
                android:gravity="top|center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/four"
                android:id="@+id/four"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:onClick="ConcatNumber"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/one"
                android:id="@+id/one"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:onClick="Correct"
                android:background="@drawable/red_small_button_selector_2"
                android:text="@string/correct"
                android:gravity="top|center_horizontal"
                android:paddingTop="10dp"
                android:id="@+id/correct"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_button_selector_2"
                android:onClick="ConcatNumber"
                android:text="@string/eight"
                android:gravity="top|center_horizontal"
                android:paddingTop="10dp"
                android:id="@+id/eight"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="ConcatNumber"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/five"
                android:id="@+id/five"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="ConcatNumber"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/two"
                android:id="@+id/two"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="ConcatNumber"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/zero"
                android:id="@+id/zero"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="ConcatNumber"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/nine"
                android:id="@+id/nine"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:onClick="ConcatNumber"
                android:text="@string/six"
                android:id="@+id/six"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/three"
                android:id="@+id/three"
                android:onClick="ConcatNumber"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="ConcatNumber"
                android:gravity="top|center_horizontal"
                android:background="@drawable/white_button_selector_2"
                android:paddingTop="10dp"
                android:text="@string/decimal"
                android:id="@+id/decimal"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">
         </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:gravity="top|center_horizontal"
                android:background="@drawable/red_small_button_selector_2"
                android:paddingTop="10dp"
                android:layout_height="0dp"
                android:text="@string/plus"
                android:onClick="PlusMinus"
                android:id="@+id/plus"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/minus"
                android:gravity="top|center_horizontal"
                android:background="@drawable/red_small_button_selector_2"
                android:onClick="PlusMinus"
                android:paddingTop="10dp"
                android:id="@+id/minus"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/equals"
                android:gravity="top|center_horizontal"
                android:background="@drawable/red_large_button_selector_2"
                android:onClick="Equals"
                android:paddingTop="10dp"
                android:id="@+id/equals"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
